--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.1",
   "main": "./src/index.js",
   "scripts": {
-    "start": "NODE_ENV=production nyc -a test",
-    "test": "nyc -a test",
-    "format": "format --write",
-    "format:check": "format --list-different"
+    "start": "t -p",
+    "test": "t",
+    "format": "f -w",
+    "format:check": "f"
   },
   "dependencies": {
     "grpc": "1.10.1"
   },
   "devDependencies": {
-    "@magic/lint": "github:magic/lint",
     "@magic/test": "github:magic/test"
   }
 }
