--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format:check": "f"
   },
   "dependencies": {
+    "@magic/log": "github:magic/log",
     "grpc": "1.11.0-pre2"
   },
   "devDependencies": {
